<resources>
    <string name="app_name">BookReaderApp</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user_type">User Type</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="signup_end_text">If you already have an account, please login!</string>
    <string name="login_end_text">If you don\'t have an account, please sign up!</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="select_file">Select File</string>
    <string name="upload_book">Upload Book</string>
    <string name="books_list">Books List</string>
    <string name="name">Name:</string>
    <string name="book_tile">Book Title</string>
    <string name="author_title">Author:</string>
    <string name="author_name">Author Name</string>
    <string name="desc">Description:</string>
    <string name="book_desc">Book Description</string>
    <string name="download_icon">Download Box Icon</string>
</resources>

