<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Book Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/book_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/book_tile"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ImageView
            android:id="@+id/download_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/download_icon"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/download_icon"/>
    </LinearLayout>



    <!-- Book Author -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_title"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/book_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/author_name"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>



    <!-- Book Description -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/book_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/book_desc"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>
    <!-- Divider Line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"/>
</LinearLayout>
