<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/baby_blue"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <!-- First Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:background="@drawable/text_background"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:autofillHints="autofill_hint_first_name"
        android:inputType="textPersonName"/>

    <!-- Last Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:background="@drawable/text_background"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:autofillHints="autofill_hint_last_name"
        android:inputType="textPersonName" />

    <!-- Username -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@drawable/text_background"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:autofillHints="autofill_hint_unique_field"
        android:inputType="text" />

    <!-- Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/text_background"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:autofillHints="autofill_hint_password" />

    <!-- User Type Radio Group -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_type"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="16sp" />
    <RadioGroup
        android:id="@+id/user_type_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/admin"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/user"
            android:textSize="16sp" />
    </RadioGroup>


    <Button
        android:id="@+id/signup_btn"
        android:layout_width="198dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/signup_end_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/signup_end_text"
        android:textColor="@android:color/holo_blue_dark"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>
