<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baby_blue"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_book"
            android:layout_gravity="center"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_background"
            android:padding="10dp"
            android:hint="@string/title"
            android:layout_marginBottom="10dp"/>

        <!-- Author -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_background"
            android:padding="10dp"
            android:hint="@string/author"
            android:layout_marginBottom="10dp"/>

        <!-- Description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_background"
            android:hint="@string/description"
            android:layout_marginBottom="10dp"
            android:inputType="textMultiLine"
            android:minLines="3"/>

        <Button
            android:id="@+id/select_file_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_file"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/upload_book_btn"
            android:layout_width="198dp"
            android:layout_height="59dp"
            android:text="@string/upload_book"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>
