<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/baby_blue"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <!-- Username -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@drawable/text_background"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:inputType="text"
        android:autofillHints="username" />

    <!-- Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/text_background"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="198dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@android:color/white"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/login_end_text" />
</LinearLayout>
